--- a/server/views/main/main.html
+++ b/server/views/main/main.html
@@ -5,10 +5,10 @@
     <title><%=title%></title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
-    <link rel="stylesheet" href="/static/lib/bootstrap-3.3.7/dist/css/bootstrap.min.css" />
-    <script src="/static/lib/vue-2.3.0/vue.min.js"></script>
-    <script src="/static/lib/vue-router-2.6.0/dist/vue-router.min.js"></script>
-    <%-include("./assets.css.html")%>
+    <link rel="stylesheet" href="<%=static_host%>/static/lib/bootstrap-3.3.7/dist/css/bootstrap.min.css" />
+    <script src="<%=static_host%>/static/lib/vue-2.3.0/vue.min.js"></script>
+    <script src="<%=static_host%>/static/lib/vue-router-2.6.0/dist/vue-router.min.js"></script>
+    <%-include("./assets.css.html",{static_host:static_host})%>
 </head>
 <body>
 <div id="mainBody">
@@ -25,6 +25,6 @@
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
 </div>
-<%-include("./assets.js.html")%>
+<%-include("./assets.js.html",{static_host:static_host})%>
 </body>
 </html>
