--- a/server/views/main/main.html
+++ b/server/views/main/main.html
@@ -24,6 +24,8 @@
     <!-- 路由出口 -->
     <!-- 路由匹配到的组件将渲染在这里 -->
     <router-view></router-view>
+
+    hello world
 </div>
 <%-include("./assets.js.html",{static_host:static_host})%>
 </body>
