--- a/server/views/main/assets.css.html
+++ b/server/views/main/assets.css.html
@@ -1,1 +1,1 @@
-<link href="<%=static_host%>/static/assets/css/main.9fd7c77bb56c79717d7558a044e6c156.min.css" rel="stylesheet" />
+<link href="<%=static_host%>/static/assets/css/main.css" rel="stylesheet" />
