--- a/server/views/main/assets.js.html
+++ b/server/views/main/assets.js.html
@@ -1,1 +1,1 @@
-<script src="<%=static_host%>/static/assets/js/main.64e3502fdde4b76deffd.min.js"></script>
+<script src="<%=static_host%>/static/assets/js/main.js"></script>
