--- a/client_spa/src/index.less
+++ b/client_spa/src/index.less
@@ -1,3 +1,5 @@
+@import "./_variables.less";
+
 
 html,body,ul,li,div,p,section,footer,head{
   margin: 0;
@@ -6,6 +8,6 @@ html,body,ul,li,div,p,section,footer,head{
 }
 
 .app-header{
-  height: 60px;
+  height: @PAGE_HEADER_HEIGHT;
   background: #485c71;
 }
