--- a/client_spa/src/index.less
+++ b/client_spa/src/index.less
@@ -9,5 +9,14 @@ html,body,ul,li,div,p,section,footer,head{
 
 .app-header{
   height: @PAGE_HEADER_HEIGHT;
-  background: #485c71;
+  width: 100%;
+  .nav{
+    width: 100%;
+    height: @PAGE_HEADER_HEIGHT;
+    background: #19bca1;
+    position: fixed;
+    top:0;
+    left: 0;
+  }
+
 }
