--- a/client_spa/src/_commons.less
+++ b/client_spa/src/_commons.less
@@ -1,20 +1,37 @@
-html,body,ul,li,div,p,section,footer,head{
+html, body, ul, li, div, p, section, footer, head {
   margin: 0;
   padding: 0;
   list-style-type: none;
   font-size: 14px;
 }
 
-html,body {
-  font-family: sans-serif;
+html, body {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   height: 100%;
-  background-color:#e9edf0;
+  background-color: #e9edf0;
+  font-size: 14px;
+  color: #222;
+  font-family: "Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif;
 }
 
-a{
+a {
   background: transparent;
   border: none;
   outline: none;
+}
+
+.bs-clear{
+  clear: both;
+  height: 0;
+}
+
+.bs-clear10{
+  clear: both;
+  height: 10px;
+}
+
+.bs-clear20{
+  clear: both;
+  height: 20px;
 }
