--- a/client_spa/src/components/Dialog/Dialog.less
+++ b/client_spa/src/components/Dialog/Dialog.less
@@ -1,4 +1,94 @@
+@DIALOG_BORDER_RADIUS:1px;
+
 .bs-dialog{
+  width: 300px;
+  height: 150px;
+  background-color: #ffffff;
+  position: absolute;
+  top:50%;
+  left: 50%;
+  right: 0;
+  bottom: 0;
+  margin-left: -150px;
+  margin-top: -150px;
+  border-radius: @DIALOG_BORDER_RADIUS;
+  box-shadow: 0 4px 8px rgba(0,0,0,.32),0 8px 40px rgba(0,0,0,.4);
+  padding: 24px;
+}
+
+
+.bs-dialog-title {
+  height: 40px;
+  line-height: 40px;
+  font-size: 20px;
+  color: #222;
+  *{
+    font-size: 20px;
+  }
+}
+
+.bs-dialog-header{
+  position: relative;
+  span{
+    display: block;
+    width: 12px;
+    height: 12px;
+    position: absolute;
+    top: 12px;
+    right: 10px;
+    background: url("/static/images/uis/close_16px.png") no-repeat;
+    background-size: cover;
+    cursor: pointer;
+  }
+}
+
+.bs-dialog-footer{
+
+  position: absolute;
+  bottom: 15px;
+  right: 10px;
+
+  i{
+    height: 30px;
+    line-height: 30px;
+    margin: 6px 6px 0;
+    padding: 0 20px;
+    color: #333;
+    border-radius: 2px;
+    font-weight: 100;
+    font-size: 12px;
+    cursor: pointer;
+    text-decoration: none;
+    font-style: normal;
+    display: inline-block;
+    transition: color 200ms cubic-bezier(0.4,0.0,0.2,1),background 200ms cubic-bezier(0.4,0.0,0.2,1),box-shadow 400ms cubic-bezier(0.4,0.0,0.2,1);
+    letter-spacing: 2px;
+  }
+  i.ok{
+    color: #fff;
+    background: #4285f4;
+    color: rgba(255,255,255,1);
+    &:hover{
+      background: #4285f4;
+      color: rgba(255,255,255,1);
+    }
+  }
+
+
+  i.cancel{
+    &:hover{
+      box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
+    }
+  }
 
 }
 
+
+.bs-dialog-mask{
+  position: absolute;
+  top:0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: fade(#000000,50);
+}
