--- a/client_spa/src/components/Dialog/Dialog.less
+++ b/client_spa/src/components/Dialog/Dialog.less
@@ -43,44 +43,12 @@
 }
 
 .bs-dialog-footer{
-
   position: absolute;
   bottom: 15px;
   right: 10px;
-
-  i{
-    height: 30px;
-    line-height: 30px;
-    margin: 6px 6px 0;
-    padding: 0 20px;
-    color: #333;
-    border-radius: 2px;
-    font-weight: 100;
-    font-size: 12px;
-    cursor: pointer;
-    text-decoration: none;
-    font-style: normal;
-    display: inline-block;
-    transition: color 200ms cubic-bezier(0.4,0.0,0.2,1),background 200ms cubic-bezier(0.4,0.0,0.2,1),box-shadow 400ms cubic-bezier(0.4,0.0,0.2,1);
-    letter-spacing: 2px;
+  .bs-button {
+    margin: 6px 6px 0 6px;
   }
-  i.ok{
-    color: #fff;
-    background: #4285f4;
-    color: rgba(255,255,255,1);
-    &:hover{
-      background: #4285f4;
-      color: rgba(255,255,255,1);
-    }
-  }
-
-
-  i.cancel{
-    &:hover{
-      box-shadow: 0 2px 2px 0 rgba(0,0,0,0.14),0 3px 1px -2px rgba(0,0,0,0.12),0 1px 5px 0 rgba(0,0,0,0.2);
-    }
-  }
-
 }
 
 
