--- a/client_spa/src/views/page_app/AppView.less
+++ b/client_spa/src/views/page_app/AppView.less
@@ -8,11 +8,12 @@
     width: 100%;
     height: @PAGE_HEADER_HEIGHT;
     background: #19bca1;
-    position: fixed;
+    //position: fixed;
     top:0;
     left: 0;
     z-index: 10;
   }
+
   .nav-right{
     float: right;
     height: @PAGE_HEADER_HEIGHT;
