--- a/client_spa/src/_commons.less
+++ b/client_spa/src/_commons.less
@@ -15,6 +15,45 @@ html, body {
   font-family: "Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif;
 }
 
+input[type=text],select{
+  border: 1px solid #e0e0e0;
+  width: 100%;
+  height: 35px;
+  line-height: 35px;
+  border-radius: 2px;
+  text-indent: 1em;
+  background-color: #ffffff;
+}
+
+
+textarea{
+  border: none;
+  width: 96%;
+  border-radius: 2px;
+  text-indent: 0em;
+  height: 300px;
+  resize: none;
+  margin: 2%;
+  display: block;
+  outline: none;
+  font-size: 14px;
+  line-height: 25px;
+  padding: 0;
+}
+
+
+select{
+  text-indent: 10px;
+
+}
+
+
+.bs-textarea-wrapper{
+  border: 1px solid #e0e0e0;
+  width: 100%;
+  border-radius: 2px;
+}
+
 a {
   background: transparent;
   border: none;
