--- a/client_spa/src/views/page_topics/TopicsView.less
+++ b/client_spa/src/views/page_topics/TopicsView.less
@@ -1,35 +1,34 @@
-.TopicsItemView{
+.TopicsItemView {
   position: relative;
 
-  &.noCover{
-    .cover{
+  &.noCover {
+    .cover {
       display: none;
     }
-    .content{
+    .content {
       margin-left: 6px;
     }
   }
 
-
-  .cover{
+  .cover {
     position: absolute;
     left: 20px;
     top: 15px;
-    img{
+    img {
       width: 200px;
       height: 120px;
     }
   }
-  .content{
+  .content {
     margin-left: 220px;
-    .title{
+    .title {
       color: #333;
       font-size: 16px;
       line-height: 40px;
       display: block;
       text-decoration: none;
     }
-    .summary{
+    .summary {
       color: #777;
       font-size: 13px;
       line-height: 1.6;
@@ -38,47 +37,44 @@
     }
   }
 
-
-  .infos{
+  .infos {
     margin-top: 10px;
     line-height: 25px;
     color: #999;
     font-size: 13px;
-    .avatar{
+    .avatar {
       width: 20px;
       height: 20px;
       border-radius: 100px;
       position: relative;
-      top:5px;
+      top: 5px;
     }
 
-    span{
+    span {
       display: inline-block;
       margin-left: 10px;
     }
-    span.nickname{
+    span.nickname {
       margin-left: 5px;
     }
   }
 }
 
+@media screen and (max-width: 750px) {
 
-@media screen and (max-width: 750px)  {
-
-  .TopicsItemView{
-    .cover{
+  .TopicsItemView {
+    .cover {
       display: none;
     }
-    .content{
+    .content {
       margin-left: 6px;
     }
   }
 }
 
-
-@media screen and (max-width: 420px)  {
-  .TopicsItemView{
-    .infos span.createtime{
+@media screen and (max-width: 420px) {
+  .TopicsItemView {
+    .infos span.createtime {
       display: none;
     }
   }
@@ -105,5 +101,36 @@
 
 }
 
+
+
+
+
+
+.TopicCreateView {
+
+  .box {
+
+    padding-bottom: 20px;
+
+    h2 {
+      font-size: 14px;
+      line-height: 1.5;
+      color: #333;
+    }
+
+    .summary-textarea textarea {
+      height: 60px;
+    }
+
+    .upload-cover {
+      width: 120px;
+    }
+
+    .select-category{
+      max-width: 200px;
+    }
+
+  }
+}
 
 
