--- a/client/src/kaihe/index.less
+++ b/client/src/kaihe/index.less
@@ -1,4 +1,26 @@
+
+html,body,p,div,li,ul{
+  margin: 0;
+  padding: 0;
+}
 body{
-  border: 1px solid #000000;
+}
+
+.app-header{
   background: url("./images/hdbg.jpg");
+  background-size: cover;
+  position: relative;
+  font-size: 12px;
+  width: 100%;
+  height: 246px;
+  text-align: left;
+  color: #fff;
+}
+
+.imagesDataList1{
+  clear: both;
+}
+.imagesDataList2{
+  float: left;
+  margin: 10px;
 }
