--- a/client/src/ubibi/views/page_topics/TopicsView.less
+++ b/client/src/ubibi/views/page_topics/TopicsView.less
@@ -11,9 +11,8 @@
   }
 
   .cover {
-    position: absolute;
-    left: 20px;
-    top: 15px;
+    float: left;
+    padding: 5px;
     img {
       width: 200px;
       height: 120px;
