--- a/client/src/ubibi/views/page_user/user.less
+++ b/client/src/ubibi/views/page_user/user.less
@@ -1,6 +1,69 @@
 
-.user-create{
-  .regTypeCurrent{
+.user-create {
+  .regTypeCurrent {
     color: #1b6d85;
   }
+}
+
+.user-login {
+  width: 100%;
+  min-height: 500px;
+}
+
+
+.login-box {
+  background-color: #ffffff;
+  max-width: 400px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
+  margin: 50px auto;
+  border-radius: 3px;
+
+  .login-title {
+    text-align: center;
+    line-height: 40px;
+    //margin: 20px;
+    padding: 10px 0;
+  }
+
+  .login-line {
+    margin-bottom: 20px;
+  }
+
+  .login-input {
+    width: 90%;
+    margin: 0 auto;
+    height: 40px;
+    line-height: 40px;
+    outline: none;
+    padding: 0;
+    border: 1px solid #f0f0f0;
+    display: block;
+    text-indent: 20px;
+    border-radius: 4px;
+
+    &:focus {
+      border-color: #19bca1;
+    }
+  }
+
+  .login-btn {
+    display: block;
+    width: 90%;
+    padding: 0;
+    height: 40px;
+    line-height: 40px;
+    margin: 0 auto;
+    font-size: 16px;
+    letter-spacing: 5px;
+  }
+
+  .goto {
+    text-align: right;
+    padding: 0 22px;
+    a{
+      color: #19bca1;
+      text-decoration: none;
+    }
+  }
+
 }
