--- a/client/src/ubibi/_commons.less
+++ b/client/src/ubibi/_commons.less
@@ -1,4 +1,4 @@
-html, body, ul, li, div, p, section, footer, head {
+html, body, ul, ol , li, div, p, section, footer, head {
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -48,12 +48,6 @@ select{
 }
 
 
-.bs-textarea-wrapper{
-  border: 1px solid #e0e0e0;
-  width: 100%;
-  border-radius: 2px;
-}
-
 a {
   background: transparent;
   border: none;
@@ -63,6 +57,11 @@ a {
 .bs-clear{
   clear: both;
   height: 0;
+}
+
+.bs-clear1{
+  clear: both;
+  height: 1px;
 }
 
 .bs-clear10{
@@ -80,3 +79,4 @@ a {
   text-overflow: ellipsis;
   white-space:nowrap;
 }
+
