--- a/client/src/ubibi/components/Dialog/Dialog.less
+++ b/client/src/ubibi/components/Dialog/Dialog.less
@@ -60,3 +60,34 @@
   bottom: 0;
   background-color: fade(#000000,50);
 }
+
+
+
+
+.bs-TipsDialogWrapper{
+
+  .bs-dialog-mask{
+    display: none;
+  }
+
+  .bs-dialog-header{
+    display: none;
+  }
+
+  .bs-dialog-footer{
+    display: none;
+  }
+
+  .bs-dialog{
+    margin-left: -60px;
+    margin-top: -42px;
+    width: 120px;
+    height: 45px;
+    line-height: 45px;
+    color: #ffffff;
+    text-align: center;
+    background-color: fade(#000000,60);
+    padding: 0 10px;
+  }
+
+}
