--- a/client/src/ubibi/components/marked.less
+++ b/client/src/ubibi/components/marked.less
@@ -77,8 +77,14 @@
     box-sizing: content-box;
   }
 
-
   p { margin: 1em 0;}
+
+
+  img{
+    max-width: 100%;
+    display: block;
+  }
+
 
   blockquote{
     margin: 1em 0;
