--- a/client/src/ubibi/views/page_app/AppView.less
+++ b/client/src/ubibi/views/page_app/AppView.less
@@ -25,7 +25,35 @@
       padding: 0 5px;
     }
     margin-right: 20px;
+
   }
+
+
+  .login_ok{
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    color: #ffffff;
+    font-size: 13px;
+    .nickname{
+      display: inline-block;
+    }
+
+    .avatar{
+      width: 40px;
+      height: 40px;
+      border-radius: 100px;
+      display: inline-block;
+      margin: 0 20px;
+    }
+    .exit{
+      color: #f0f0f0;
+    }
+  }
+
+
+
 }
 
 
@@ -80,4 +108,26 @@
     max-width: 1138px;
     margin: 0 auto;
   }
+}
+
+
+
+.bs-router-fade-enter-active{
+  transition: all .5s
+}
+.bs-router-fade-enter{
+  opacity: 0;
+  //-webkit-transform: translate(30px, 0);
+  //transform: translate(30px, 0);
+  transform: translate( 0,30px);
+}
+
+.bs-router-fade-leave-active{
+  display: none;
+}
+.bs-router-fade-leave-to {
+  display: none;
+  //opacity: 0;
+  //-webkit-transform: translate(30px, 0);
+  //transform: translate(30px, 0);
 }
