--- a/client/src/ubibi/views/view-components/ReplyView/ReplyView.less
+++ b/client/src/ubibi/views/view-components/ReplyView/ReplyView.less
@@ -17,6 +17,14 @@
   }
 
 
+  .ReplyCreateFull{
+    color: red;
+    text-indent: 20px;
+    margin: 20px 30px;
+    font-size: 12px;
+  }
+
+
 
   .ReplyItem{
     position: relative;
