--- a/client/src/ubibi/_commons.less
+++ b/client/src/ubibi/_commons.less
@@ -1,3 +1,14 @@
+@import "_variables";
+* {
+  outline: 0;
+}
+
+*, :after, :before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
 html, body, ul, ol , li, div, p, section, footer, head {
   margin: 0;
   padding: 0;
@@ -6,10 +17,12 @@ html, body, ul, ol , li, div, p, section, footer, head {
 }
 
 html, body {
+  min-width: 1200px;
+  width: 100%;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   height: 100%;
-  background-color: #e9edf0;
+  background-color: #ededef;;
   font-size: 14px;
   color: #222;
   font-family: "Helvetica Neue",Helvetica,"Hiragino Sans GB","Microsoft YaHei",Arial,sans-serif;
@@ -47,11 +60,17 @@ select{
 
 }
 
+img {
+  border: 0;
+  vertical-align: top;
+  display: inline-block;
+}
 
 a {
   background: transparent;
   border: none;
   outline: none;
+  text-decoration: none;
 }
 
 .bs-clear{
@@ -80,3 +99,66 @@ a {
   white-space:nowrap;
 }
 
+
+.bs-box {
+  background-color: #fff;
+  box-shadow: 3px 3px 8px rgba(136,136,136,.2);
+  transition: all .3s;
+}
+
+
+
+
+.col-sm-3 {
+  width: 25%;
+  float: left;
+  position: relative;
+  min-height: 1px;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+
+.container{
+  width: 1170px;
+  margin-right: auto;
+  margin-left: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.section{
+  padding-top: 60px;
+  padding-bottom: 60px;
+  border-bottom: 1px solid #eeeeee;
+}
+
+
+.bs-section{
+  padding: 50px 0;
+  background: #ffffff;
+}
+
+.bs-container{
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.bs-page-foo(){
+  margin-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 1000px;
+}
+
+.bs-page{
+  .bs-page-foo();
+}
+
+.bs-operations{
+  padding: 10px 0;
+  .oper{
+    float: right;
+  }
+
+}
