--- a/client/src/ubibi/views/page_user/user.less
+++ b/client/src/ubibi/views/page_user/user.less
@@ -15,7 +15,7 @@
   background-color: #ffffff;
   max-width: 400px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, .5);
-  margin: 50px auto;
+  margin: 100px auto auto auto;
   border-radius: 3px;
 
   .login-title {
